compiler/w_session/tests/errors/pointer-type.w
fn foo(): *i32 {}
fn bar(): **************************************************i32 {}